[metadata]
name = cdst
version = 0.0.1
author = Calvin Chan
author_email = calvin.chan@bayer.com
description = CDST is a collection of data science Python library developed by Calvin Chan at DSAA. It containing various data science toolsets mostly based on deep learning technique: General Scalable Deep Learning Fully Connected Network, Calvins Scalable Parallel Downsampler (CSPD), Ordinal Hyperplane Loss Classifier (OHPL)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Bayer-Group/cdst
project_urls =
    Bug Tracker = git@github.com:Bayer-Group/cdst/issues
classifiers =
    Programming Language :: Python :: 3
    License :: Commercial Proprietary
    Operating System :: OS Independent

[options]
python_requires = >=3.8
setup_requires = 
    cython>="0.29.25"
install_requires =
    numpy>="1.22.0"
    scikit-learn
    pandas
    torch>="1.9.0"
    skorch
    ray>="1.12.0"
    tensorboardX
    gekko>="1.0.2"
    tensorflow
